# jdcc

./: .gitignore  README.md  all.json
sln/c#/hey/jv0/: main.cs
sln/c#/hey/jv0/Properties/: launchSettings.json
sln/go/find/jv0/: main.go
sln/go/hey/jv0/: main.go
sln/py/find/jv0/: main.py
sln/py/hey/jv0/: README.md  main.py  pyproject.toml  readme.md
sln/py/hey/jv0/src/jv0/: __init__.py  __main__.py
sln/rust/: .gitignore
src/bun/server/jv0/: bun.lockb  index.ts  package.json
src/go/game/jv0/: game.go  go.mod  level.go  player.go  spike.go
src/go/server/jv0/: main.go
src/py/sever/jv0/: main.py
src/rust/server/jv0/: Cargo.toml
src/rust/server/jv0/src/: main.rs
www/: find.html
