[project]
name = "jv0"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Beizbol", email = "30479707+Beizbol@users.noreply.github.com" },
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
jv0 = "jv0:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/jv0"]
